crates/cargo-tsuno/tests/snapshots/verify_cli__rejects_open_mutable_reference_after_abstract_call.snap
---
source: crates/cargo-tsuno/tests/verify_cli.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL bad_close
  mutable reference close failed
  bb2
  model: [("model", "arg_1_0 -> 0\ncall_mut_1 -> 1\n")]

stderr:
