crates/cargo-tsuno/tests/snapshots/verify_cli__verifies_a_trivial_assertion_fixture.snap
---
source: crates/cargo-tsuno/tests/verify_cli.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS ok
  all assertions discharged

stderr:
